Added advertiser route
